# biometric_integration

./: .gitignore  LICENSE  README.md  ebkn_fkweb_specs.txt  gemini_research.txt  pyproject.toml  zkteco_adms_specs.md
.github/workflows/: ci.yml
biometric_integration/: api.py  cli.py  hooks.py  patches.txt  renderers.py
biometric_integration/adapters/: base.py  ebkn.py  zkteco.py
biometric_integration/biometric_integration/doctype/attendance_device/: attendance_device.js  attendance_device.json  attendance_device.py
biometric_integration/biometric_integration/doctype/attendance_device_command/: attendance_device_command.js  attendance_device_command.json  attendance_device_command.py
biometric_integration/biometric_integration/doctype/attendance_device_link/: attendance_device_link.json  attendance_device_link.py
biometric_integration/commands/: __init__.py  utils.py
biometric_integration/fixtures/: custom_field.json  property_setter.json  property_setters.json
biometric_integration/patches/v2_0/: migrate_from_v1.py  rename_settings_doctype.py
biometric_integration/patches/v2_1/: drop_duplicate_checkin_device_field.py  move_ebkn_fk_name_to_device_model.py  rename_unknown_pin_setting.py
biometric_integration/proxy/: configurator.py  detector.py  template.py
biometric_integration/public/js/: employee.js  employee_list.js
biometric_integration/services/: checkin.py  command_processor.py  create_checkin.py  device_mapping.py  ebkn_processor.py  logger.py  user_sync.py  zkteco_processor.py
biometric_integration/utils/: device_cache.py  installation.py
(+32 files in other folders)
