[project]
name = "biometric_integration"
authors = [
    { name = "KhaledBinAmir", email = "khaledbinamir@gmail.com"}
]
description = "Real-time attendance integration for ZKTeco (ADMS) and EBKN biometric devices with Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[project.urls]
Repository = "https://github.com/KhaledBinAmir/biometric_integration"
Issues = "https://github.com/KhaledBinAmir/biometric_integration/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "E402"]
